# dashboard

./: .dockerignore  .gitignore  README.MD  docker-compose.yml  start-dev.sh  stop.sh
backend/: .dockerignore  .gitignore  Cargo.toml  Dockerfile
backend/src/: location.rs  main.rs  weather.rs
frontend/: Dockerfile  package.json
frontend/src/: app.css
frontend/src/components/: clock.svelte  t3.svelte  weather.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
